--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                           <div class="col-8"></div>
                           <div class="col-2 jutify-cosntent-end">Privātuma politika</div>
                       </div>
-                      <img class="contacts-border-top" src="assets/img/rippedTop.png" alt=""/>
+                      <img class="contacts-border-top" src="assets/img/rippedTopYellow.png" alt=""/>
   </div>
 </div>
 	<!-- JavaScript -->
